Another Dutch update. Thanks again to Martijn!

--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -1,7 +1,7 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.8.2
+# Messages Bundle for LimeWire 4.11.1
 # Specialization for: Dutch - Netherlands, Belgium
-# Thanks to: Willem Broekema, Edwin van Ouwerkerk Moria, Reinier Bergwerf, Jan Willem Lageman
+# Thanks to: Willem Broekema, Edwin van Ouwerkerk Moria, Reinier Bergwerf, Jan Willem Lageman, Martijn Kortleve
 ################################################################################
 LOCALE_LANGUAGE_CODE=nl
 LOCALE_LANGUAGE_NAME=Nederlands
@@ -123,7 +123,7 @@ OPTIONS_BUTTON_REVERT_TO_DEFAULT=Herstel standaardinstellingen.
 #### OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=Revert All Settings to the Factory Defaults
 OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=Herstelt alle instellingen terug naar fabrieksinstellingen
 #### OPTIONS_LEARN_MORE_LABEL=Learn more about this option...
-#? OPTIONS_LEARN_MORE_LABEL=
+OPTIONS_LEARN_MORE_LABEL=Meer informatie over deze optie...
 
 ################################################################################
 # Key/value pairs for general terms, such as "yes" and "no"
@@ -287,7 +287,7 @@ DOWNLOAD_TITLE=Downloads
 #### UPLOAD_TITLE=Uploads
 UPLOAD_TITLE=Uploads
 #### CONSOLE_TITLE=Console
-CONSOLE_TITLE=Console
+CONSOLE_TITLE=Logboek
 
 ################################################################################
 # Key/value pairs for the tooltips of the main windows
@@ -404,11 +404,11 @@ MENU_NAV_LIB_MNEMONIC=M
 #### MENU_NAV_LIB_ACCESSIBLE=Display the Library Screen
 MENU_NAV_LIB_ACCESSIBLE=Ga naar het 'Mediatheek'-scherm.
 #### MENU_NAV_CONSOLE=Console
-#? MENU_NAV_CONSOLE=
+MENU_NAV_CONSOLE=Logboek
 #### MENU_NAV_CONSOLE_MNEMONIC=O
-#? MENU_NAV_CONSOLE_MNEMONIC=
+MENU_NAV_CONSOLE_MNEMONIC=L
 #### MENU_NAV_CONSOLE_ACCESSIBLE=Display the Console Screen
-MENU_NAV_CONSOLE_ACCESSIBLE=Ga naar het 'Console'-scherm
+MENU_NAV_CONSOLE_ACCESSIBLE=Ga naar het 'Logboek'-scherm
 
 
 #### MENU_VIEW_TITLE=View
@@ -452,11 +452,11 @@ MENU_VIEW_LIBRARY_MNEMONIC=M
 #### MENU_VIEW_LIBRARY_ACCESSIBLE=Show Library Window
 MENU_VIEW_LIBRARY_ACCESSIBLE=Toon 'Mediatheek'-scherm
 #### MENU_VIEW_CONSOLE=Console
-#? MENU_VIEW_CONSOLE=
+MENU_VIEW_CONSOLE=Logboek
 #### MENU_VIEW_CONSOLE_MNEMONIC=O
-#? MENU_VIEW_CONSOLE_MNEMONIC=
+MENU_VIEW_CONSOLE_MNEMONIC=L
 #### MENU_VIEW_CONSOLE_ACCESSIBLE=Show Console Window
-MENU_VIEW_CONSOLE_ACCESSIBLE=Toon 'Console'-scherm
+MENU_VIEW_CONSOLE_ACCESSIBLE=Toon 'Logboek'-scherm
 #### MENU_VIEW_THEMES_TITLE=Apply Skins
 MENU_VIEW_THEMES_TITLE=Thema's toepassen
 #### MENU_VIEW_THEMES_TITLE_MNEMONIC=A
@@ -539,21 +539,21 @@ MENU_TOOLS_OPTIONS_MNEMONIC=O
 MENU_TOOLS_OPTIONS_ACCESSIBLE=Ga naar het 'Opties'-scherm
 
 #### MENU_FILTERS_TITLE=Filters
-#? MENU_FILTERS_TITLE=
+MENU_FILTERS_TITLE=Filters
 #### MENU_FILTERS_TITLE_MNEMONIC=S
-#? MENU_FILTERS_TITLE_MNEMONIC=
+MENU_FILTERS_TITLE_MNEMONIC=F
 #### MENU_FILTERS_CONFIGURE=Configure Content Filters
-#? MENU_FILTERS_CONFIGURE=
+MENU_FILTERS_CONFIGURE=Configureer Bestand Filter
 #### MENU_FILTERS_CONFIGURE_MNEMONIC=C
-#? MENU_FILTERS_CONFIGURE_MNEMONIC=
+MENU_FILTERS_CONFIGURE_MNEMONIC=C
 #### MENU_FILTERS_CONFIGURE_ACCESSIBLE=Configure LimeWire's Content Filtering Options
-#? MENU_FILTERS_CONFIGURE_ACCESSIBLE=
+MENU_FILTERS_CONFIGURE_ACCESSIBLE=Configureer LimeWire's Bestand Filter Opties
 #### MENU_FILTERS_LEARN_MORE=Learn More...
-#? MENU_FILTERS_LEARN_MORE=
+MENU_FILTERS_LEARN_MORE=Lees meer...
 #### MENU_FILTERS_LEARN_MORE_ACCESSIBLE=Learn More about LimeWire's Content Filtering System
-#? MENU_FILTERS_LEARN_MORE_ACCESSIBLE=
+MENU_FILTERS_LEARN_MORE_ACCESSIBLE=Lees meer over LimeWire's Bestand Filter Systeem
 #### MENU_FILTERS_LEARN_MORE_MNEMONIC=L
-#? MENU_FILTERS_LEARN_MORE_MNEMONIC=
+MENU_FILTERS_LEARN_MORE_MNEMONIC=L
 
 #### MENU_HELP_TITLE=Help
 MENU_HELP_TITLE=Hulp
@@ -702,7 +702,7 @@ SEARCH_PUBLIC_HTTP_PAGE_STRING=Web-pagina voor bestand(en)
 #### SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Repeat Search
 SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Herhaal zoekopdracht
 #### SEARCH_PUBLIC_REPEAT_SEARCH_NO_CLEAR_STRING=Get More Results
-#? SEARCH_PUBLIC_REPEAT_SEARCH_NO_CLEAR_STRING=
+SEARCH_PUBLIC_REPEAT_SEARCH_NO_CLEAR_STRING=Zoek meer resultaten
 #### SEARCH_PUBLIC_BLOCK_STRING=Block Host
 SEARCH_PUBLIC_BLOCK_STRING=Negeer host
 #### SEARCH_RESULT_TABLE_LABEL=Results
@@ -710,7 +710,7 @@ SEARCH_RESULT_TABLE_LABEL=Resultaten
 #### SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
 SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Zoek verder
 #### SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered. 
-#? SEARCH_RESULT_SECURE_TIP=
+SEARCH_RESULT_SECURE_TIP=Dit is een beveiligd resultaat. Geen informatie van dit resultaat is bewerkt.
 #### SEARCH_SEARCHING_LABEL=Searching...
 SEARCH_SEARCHING_LABEL=Zoeken...
 #### SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
@@ -736,17 +736,17 @@ SEARCH_TYPE_KEYWORD=Trefwoord
 #### SEARCH_TYPE_WHATSNEW=What's New
 SEARCH_TYPE_WHATSNEW=Wat is nieuw
 #### SEARCH_TYPE_BROWSEHOST=Direct Connect
-SEARCH_TYPE_BROWSEHOST=Direkt contact
+SEARCH_TYPE_BROWSEHOST=Direct contact
 #### SEARCH_BROWSEHOST_TITLE=Got Friends?
 SEARCH_BROWSEHOST_TITLE=Vrienden benaderen?
 #### SEARCH_BROWSEHOST_DESC=Enter the IP address of a friend you'd like to connect to, click 'Direct Connect', and LimeWire will try to browse the files of that user.
-SEARCH_BROWSEHOST_DESC=Voer het IP-adres in van een vriend(in)waarmee u verbonden wilt worden, klik op 'Direkt contact' en LimeWire zal proberen om door de bestanden van deze gebruiker te bladeren. 
+SEARCH_BROWSEHOST_DESC=Voer het IP-adres in van een vriend(in)waarmee u verbonden wilt worden, klik op 'Direct contact' en LimeWire zal proberen om door de bestanden van deze gebruiker te bladeren. 
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 SEARCH_BROWSEHOST_MYIP=Wanneer deze persoon contact met u wilt maken moet hij/zij op Enter drukken:
 #### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
 SEARCH_BROWSEHOST_FIREWALLED=Uw computer heeft een firewall of een router en kan geen directe verbindingen ontvangen.
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
-SEARCH_BROWSEHOST_BUTTON=Direkt contact
+SEARCH_BROWSEHOST_BUTTON=Direct contact
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
 SEARCH_WHATSNEW_HIDE_ADULT=Filtreer pornografische inhoud
 #### SEARCH_WHATSNEW_TITLE_ONE=Don't Know
@@ -1055,7 +1055,7 @@ SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_ERROR=Download is niet opgeslagen in map 
 SAVE_LOCATION_NOT_A_DIRECOTRY_ERROR=Download naar map {0} is niet gelukt omdat het geen map is.  
 # {0} the full path name of the file
 #### SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Could not set file location to {0}, because the filename is invalid and may corrupt your system.
-#? SAVE_LOCATION_SECURITY_VIOLATION_ERROR=
+SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Bestandslocatie {0} kon niet worden gerealiseerd omdat de bestandsnaam ongeldig is. Dit kan uw computer beïnvloeden.
 # {0} the full path name of the file
 #### SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=Could not set file location to {0}, because it is not a regular file.
 SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=Bestandslocatie {0} kon niet worden gerealiseerd omdat het geen gangbaar bestand is. 
@@ -1243,9 +1243,9 @@ DOWNLOAD_STATUS_PAUSING=Onderbreken...
 #### DOWNLOAD_STATUS_PAUSED=Paused
 DOWNLOAD_STATUS_PAUSED=Onderbroken
 #### DOWNLOAD_STATUS_INVALID=Content Removed
-#? DOWNLOAD_STATUS_INVALID=
+DOWNLOAD_STATUS_INVALID=Bestand verwijderd
 #### DOWNLOAD_INVALID_EXPLAIN=The owner of this content has requested that this file be removed from the network.  To learn more, double-click on the download (or click preview).
-#? DOWNLOAD_INVALID_EXPLAIN=
+DOWNLOAD_INVALID_EXPLAIN=De eigenaar van dit bestand heeft verzocht dit bestand van het netwerk te verwijderen.  Om hierover meer te lezen, dubbelklik op de download (of klik op Voorbeeld).
 #### DOWNLOAD_AWAITING_SOURCES=A more specific search may be required...
 DOWNLOAD_AWAITING_SOURCES=Een specifieke zoekopdracht is misschien nodig...
 # {0} the name of the skin
@@ -1357,7 +1357,7 @@ UPLOAD_TABLE_STRING_BANNED_GREEDY=Te grote hoeveelheid
 #### UPLOAD_TABLE_STRING_HASH_TREE=Uploading Hash Tree
 UPLOAD_TABLE_STRING_HASH_TREE=Uploaden Hash Tree
 #### UPLOAD_TABLE_STRING_VALIDATING=Validation Required
-#? UPLOAD_TABLE_STRING_VALIDATING=
+UPLOAD_TABLE_STRING_VALIDATING=Bevestiging van geldigheid nodig
 #### UPLOAD_TABLE_STRING_FNF=File Not Found
 UPLOAD_TABLE_STRING_FNF=Bestand niet gevonden
 #### UPLOAD_TABLE_STRING_QUEUED=Queued at
@@ -1597,7 +1597,7 @@ SETUP_LANGUAGE_TITLE=Taalopties
 #### SETUP_LANGUAGE_LABEL=Please choose the language you would like LimeWire to use.
 SETUP_LANGUAGE_LABEL=Gelieve een taalkeuze te maken voor LimeWire.
 #### SETUP_MORE_INFO=Learn more about this option...
-#? SETUP_MORE_INFO=
+SETUP_MORE_INFO=Lees meer over deze optie...
 #### SETUP_WELCOME_TITLE=Welcome
 SETUP_WELCOME_TITLE=Welkom
 #### SETUP_WELCOME_LABEL=Welcome to the LimeWire setup wizard. LimeWire will guide you through a series of steps to configure LimeWire for optimum performance.
@@ -1619,9 +1619,9 @@ SETUP_STARTUP_LABEL=Wilt u dat LimeWire direct opstart als u uw computer aanzet?
 #### SETUP_STARTUP_CHECKBOX=Start Automatically
 SETUP_STARTUP_CHECKBOX=Automatisch opstarten
 #### SETUP_FIREWALL_TITLE=Firewall Setup
-#? SETUP_FIREWALL_TITLE=
+SETUP_FIREWALL_TITLE=Firewall Setup
 #### SETUP_FIREWALL_LABEL=LimeWire performs best with full access to the Internet. If firewall or security warnings appear, please unblock LimeWire and choose to remember the setting. Your firewall software may look different than the below picture.
-#? SETUP_FIREWALL_LABEL=
+SETUP_FIREWALL_LABEL=LimeWire werkt het beste met volledige toegang tot het Internet. Als u Firewall- of beveiligingswaarschuwingen krijgt, geef LimeWire toegang en vink aan dat deze instelling onthouden moet worden. Uw firewall software kan er anders uitzien als de afbeelding hieronder.
 #### SETUP_SCAN_TITLE=Scan for Files
 SETUP_SCAN_TITLE=Bestanden zoeken
 #### SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which folders you would like to share when the scan is complete.
@@ -1637,11 +1637,11 @@ SETUP_CONFIRM_LABEL=De onderstaande mappen komen in aanmerking om te worden gede
 #### SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire was unable to locate any files that may be shared. To continue configuring LimeWire, click "Next".
 SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire kon de plaats niet bepalen van de bestanden om te kunnen worden gedeeld. Om door te gaan met configureren van LimeWire klik op "Verder".
 #### SETUP_FILTER_TITLE=Content Filtering
-#? SETUP_FILTER_TITLE=
+SETUP_FILTER_TITLE=Bestanden Filteren
 #### SETUP_FILTER_LABEL=LimeWire can filter files that copyright owners request not be shared.  By enabling filtering, you are telling LimeWire to confirm all files you download or share with a list of removed content.  You can change this at any time by choosing Filters -> Configure Content Filters from the main menu.
-#? SETUP_FILTER_LABEL=
+SETUP_FILTER_LABEL=LimeWire kan bestanden filteren, waarvan eigenaren van het copyright verzocht hebben deze niet te delen.  Door het filteren aan te zetten, laat u LimeWire alle bestanden die u download of deelt met een lijst van verwijderde bestanden te bevestigen. U kan dit ten alle tijden nog veranderen door op Filters -> 'Configureer Bestand Filter' in het hoofdmenu te klikken.
 #### SETUP_FILTER_CHECKBOX=Enable Content Filtering
-#? SETUP_FILTER_CHECKBOX=
+SETUP_FILTER_CHECKBOX=Maak gebruik van Bestand Filter
 #### SETUP_FINISH_TITLE=Finish Setup
 SETUP_FINISH_TITLE=Installatie afronden
 #### SETUP_FINISH_LABEL=Your LimeWire setup has successfully completed. Please press the "Finish" button to begin using LimeWire.
@@ -2652,7 +2652,7 @@ OPTIONS_PROXY_MAIN_TITLE=Proxy
 #### OPTIONS_CONNECT_PREF_MAIN_TITLE=Locale Preferencing
 OPTIONS_CONNECT_PREF_MAIN_TITLE=Lokale voorkeuren
 #### OPTIONS_CONTENT_FILTER_MAIN_TITLE=Content
-#? OPTIONS_CONTENT_FILTER_MAIN_TITLE=
+OPTIONS_CONTENT_FILTER_MAIN_TITLE=Bestanden
 
 ################################################################################
 # Key/value pairs for the localization options window item
@@ -3014,18 +3014,18 @@ OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Vereist wachtwoord
 #### OPTIONS_ITUNES_DAAP_PASSWORD_LABEL=You can limit the access to this service with a password.
 OPTIONS_ITUNES_DAAP_PASSWORD_LABEL=U kunt toegang tot deze dienst beperken met een wachtwoord.
 #### OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_CHECKBOX_LABEL=Require Username:
-#? OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_CHECKBOX_LABEL=
+OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_CHECKBOX_LABEL=Vereist gebruikersnaam:
 #### OPTIONS_ITUNES_DAAP_PASSWORD_CHECKBOX_LABEL=Require Password:
-OPTIONS_ITUNES_DAAP_PASSWORD_CHECKBOX_LABEL=Vereist wachtwoord
+OPTIONS_ITUNES_DAAP_PASSWORD_CHECKBOX_LABEL=Vereist wachtwoord:
 #### OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_LABEL=Username:
-#? OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_LABEL=
+OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_LABEL=Gebruikersnaam:
 #### OPTIONS_ITUNES_DAAP_PASSWORD_TEXTFIELD_LABEL=Password:
 OPTIONS_ITUNES_DAAP_PASSWORD_TEXTFIELD_LABEL=Wachtwoord:
 
 #### OPTIONS_ITUNES_DAAP_BUFFER_SIZE_TITLE=Buffer Size
-#? OPTIONS_ITUNES_DAAP_BUFFER_SIZE_TITLE=
+OPTIONS_ITUNES_DAAP_BUFFER_SIZE_TITLE=Buffer Grootte
 #### OPTIONS_ITUNES_DAAP_BUFFER_SIZE_LABEL=You can configure the buffer size to use for streaming media.  If iTunes or other media players experience frequent rebuffering, increase this value.  A higher setting may use more memory.
-#? OPTIONS_ITUNES_DAAP_BUFFER_SIZE_LABEL=
+OPTIONS_ITUNES_DAAP_BUFFER_SIZE_LABEL=U kunt de grootte van de buffer voor 'streaming media' instellen.  Als iTunes of andere media spelers regelmatig opnieuw moet bufferen, verhoog dan de grootte.  Een hogere instelling kan meer geheugen gebruiken.
 
 
 ################################################################################
@@ -3392,11 +3392,11 @@ OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Wachtwoord:
 # in the options window
 ################################################################################
 #### OPTIONS_CONTENT_FILTER_TITLE=Content Filters
-#? OPTIONS_CONTENT_FILTER_TITLE=
+OPTIONS_CONTENT_FILTER_TITLE=Bestanden Filteren
 #### OPTIONS_CONTENT_FILTER_LABEL=You can tell LimeWire to filter files that copyright owners request not be shared.  By enabling filtering, you are instructing LimeWire to confirm all files you download or share with a list of removed content.
-#? OPTIONS_CONTENT_FILTER_LABEL=
+OPTIONS_CONTENT_FILTER_LABEL=LimeWire kan bestanden filteren, waarvan eigenaren van het copyright verzocht hebben deze niet te delen.  Door het filteren aan te zetten, laat u LimeWire alle bestanden die u download of deelt met een lijst van verwijderde bestanden te bevestigen.
 #### OPTIONS_CONTENT_FILTER_CHECKBOX_LABEL=Enable Content Filters
-#? OPTIONS_CONTENT_FILTER_CHECKBOX_LABEL=
+OPTIONS_CONTENT_FILTER_CHECKBOX_LABEL=Maak gebruik van Bestand Filter
 
 ################################################################################
 # Key/value pairs for the junk filter options window item
@@ -4804,3 +4804,4 @@ ALL_OOB_BYPASSED=Gemeden reacties
 STATS_OOB_THROUGHPUT_TITLE=Succesgehalte van OOB
 #### STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OOB Protocol
 STATS_OOB_THROUGHPUT_LABEL=Aantal verzochte en ontvangen reacties via OOB-protocol.
+
