--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -969,6 +969,11 @@ JAVA_UPGRADE_TITLE=Upgrade Your Java
 JAVA_UPGRADE_MESSAGE=LimeWire has detected that you are using an out-of-date version of Java. LimeWire looks and acts much better with newer versions of Java. Features include support for scroll-wheels on mice, a Windows XP look, and many other improvements.
 JAVA_UPGRADE_QUESTION=Would you like to get your free Java upgrade?
 
+################################################################################
+# Key/Value pairs for the change language window.
+################################################################################
+LANGUAGE_LOADING=Loading Languages
+
 ###################################################################
 # Key/value pairs for XML
 ###################################################################
