--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -881,7 +881,7 @@ SETUP_WAIT_SCAN_CANCELLED_LABEL=Scan cancelled
 SETUP_WAIT_CANCEL_SCAN_ACTION_NAME=Cancel Scan
 SETUP_CONFIRM_TITLE=Confirm Scan
 SETUP_CONFIRM_LABEL=We identified the folders below as ones that you might like to share. If you would like to share one of these folders, simply check its associated checkbox. Subfolders of shared folders will also be shared.
-SETUP_CONFIRM_FOLDERS_WILL_BE_SHARED=The selected folders below will be shared recursively.
+SETUP_CONFIRM_FOLDERS_WILL_BE_SHARED=The selected folders below (and their subfolders) will be shared.
 SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire was unable to locate any files that may be shared. To continue configuring LimeWire, click "Next".
 SETUP_FINISH_TITLE=Finish Setup
 SETUP_FINISH_LABEL=Your LimeWire setup has successfully completed. Please press the "Finish" button to begin using LimeWire.
