--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1378,6 +1378,7 @@ LICENSE_UNKNOWN_INVALID=This file may require a license in order to open and vie
 OPTIONS_SAVE_MAIN_TITLE=Saving
 OPTIONS_SHARED_MAIN_TITLE=Sharing
 OPTIONS_SPEED_MAIN_TITLE=Speed
+OPTIONS_CAPABILITIES_MAIN_TITLE=Capabilities
 OPTIONS_DOWNLOAD_MAIN_TITLE=Downloads
 OPTIONS_UPLOAD_MAIN_TITLE=Uploads
 OPTIONS_UPLOAD_BASIC_MAIN_TITLE=Basic
@@ -1469,6 +1470,13 @@ OPTIONS_SPEED_BOX_LABEL=Speed:
 OPTIONS_DISABLE_SUPERNODE_MODE_TITLE=Ultrapeer Capabilities
 OPTIONS_DISABLE_SUPERNODE_MODE_LABEL=If your computer has a fast internet connection, LimeWire may act as an "Ultrapeer" for slower users. You can disable this if needed.
 OPTIONS_DISABLE_SUPERNODE_MODE_BOX_LABEL=Disable Ultrapeer Capabilities:
+
+################################################################################
+# Key/Value pairs for disabling DHT support
+################################################################################
+OPTIONS_DISABLE_DHT_MODE_TITLE=Mojito DHT Capabilities
+OPTIONS_DISABLE_DHT_MODE_LABEL=If your computer has a fast internet connection and you stay connected for a sufficient period of time, LimeWire may connect to the Mojito DHT. You can disable this if needed.
+OPTIONS_DISABLE_DHT_MODE_BOX_LABEL=Disable Mojito DHT Capabilities:
 
 ################################################################################
 # Key/Value pairs for disabling OOB support
