--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1378,7 +1378,7 @@ LICENSE_UNKNOWN_INVALID=This file may require a license in order to open and vie
 OPTIONS_SAVE_MAIN_TITLE=Saving
 OPTIONS_SHARED_MAIN_TITLE=Sharing
 OPTIONS_SPEED_MAIN_TITLE=Speed
-OPTIONS_CAPABILITIES_MAIN_TITLE=Capabilities
+OPTIONS_PERFORMANCE_MAIN_TITLE=Performance
 OPTIONS_DOWNLOAD_MAIN_TITLE=Downloads
 OPTIONS_UPLOAD_MAIN_TITLE=Uploads
 OPTIONS_UPLOAD_BASIC_MAIN_TITLE=Basic
@@ -1465,17 +1465,11 @@ OPTIONS_SPEED_LABEL=You can specify your connection speed so that LimeWire can o
 OPTIONS_SPEED_BOX_LABEL=Speed:
 
 ################################################################################
-# Key/Value pairs for disabling supernode support
+# Key/Value pairs for disabling capabilities
 ################################################################################
-OPTIONS_DISABLE_SUPERNODE_MODE_TITLE=Ultrapeer Capabilities
-OPTIONS_DISABLE_SUPERNODE_MODE_LABEL=If your computer has a fast internet connection, LimeWire may act as an "Ultrapeer" for slower users. You can disable this if needed.
+OPTIONS_DISABLE_CAPABILITIES_TITLE=Capabilities
+OPTIONS_DISABLE_CAPABILITIES_LABEL=If your computer has a fast internet connection, LimeWire may act as an "Ultrapeer" for slower users and/or connect to the Mojito DHT. You can disable these if needed.
 OPTIONS_DISABLE_SUPERNODE_MODE_BOX_LABEL=Disable Ultrapeer Capabilities:
-
-################################################################################
-# Key/Value pairs for disabling DHT support
-################################################################################
-OPTIONS_DISABLE_DHT_MODE_TITLE=Mojito DHT Capabilities
-OPTIONS_DISABLE_DHT_MODE_LABEL=If your computer has a fast internet connection and you stay connected for a sufficient period of time, LimeWire may connect to the Mojito DHT. You can disable this if needed.
 OPTIONS_DISABLE_DHT_MODE_BOX_LABEL=Disable Mojito DHT Capabilities:
 
 ################################################################################
