new dutch translation from Martijn, thanks!

--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -410,7 +410,7 @@ MENU_VIEW_LANGS_TITLE=Verander de taal
 #### MENU_VIEW_LANGS_TITLE_MNEMONIC=H
 MENU_VIEW_LANGS_TITLE_MNEMONIC=H
 #### MENU_VIEW_LANGS_TITLE_ACCESSIBLE=Select your Language Prefereces
-#? MENU_VIEW_LANGS_TITLE_ACCESSIBLE=
+MENU_VIEW_LANGS_TITLE_ACCESSIBLE=Kies uw taal
 #### MENU_VIEW_LANGS_RESTART_REQUIRED=LimeWire must be restarted for the new language to take effect.
 MENU_VIEW_LANGS_RESTART_REQUIRED=LimeWire moet opnieuw worden gestart zodat de nieuwe taal van kracht is.
 #### MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE=Help Translate LimeWire
@@ -526,7 +526,7 @@ STATUS_BAR_SHOW_CONNECTION_QUALITY=Toon verbindingsstatus
 #### STATUS_BAR_SHOW_SHARED_FILES_COUNT=Show Shared Files Count
 STATUS_BAR_SHOW_SHARED_FILES_COUNT=Toon alle gedeelde bestanden
 #### STATUS_BAR_SHOW_LANGUAGE_STATUS=Show Language Status
-#? STATUS_BAR_SHOW_LANGUAGE_STATUS=
+STATUS_BAR_SHOW_LANGUAGE_STATUS=Toon Taal-status
 #### STATUS_BAR_SHOW_FIREWALL_STATUS=Show Firewall Status
 STATUS_BAR_SHOW_FIREWALL_STATUS=Toon firewall-status
 #### STATUS_BAR_SHOW_BANDWIDTH_CONSUMPTION=Show Bandwidth Consumption
@@ -697,13 +697,13 @@ SEARCH_XML_FIELD_ACTION_NAME=Zoeken naar {0}: {1}
 # CheckBoxList actions
 ################################################################################
 #### CHECK_BOX_LIST_SELECT_ALL_ACTION_NAME=Select All
-#? CHECK_BOX_LIST_SELECT_ALL_ACTION_NAME=
+CHECK_BOX_LIST_SELECT_ALL_ACTION_NAME=Alles Selecteren
 #### CHECK_BOX_LIST_SELECT_ALL_ACTION_TOOLTIP=Marks all Items as Selected
-#? CHECK_BOX_LIST_SELECT_ALL_ACTION_TOOLTIP=
+CHECK_BOX_LIST_SELECT_ALL_ACTION_TOOLTIP=Selecteer alle Items
 #### CHECK_BOX_LIST_DESELECT_ALL_ACTION_NAME=Deselect All
-#? CHECK_BOX_LIST_DESELECT_ALL_ACTION_NAME=
+CHECK_BOX_LIST_DESELECT_ALL_ACTION_NAME=Alles Deselecteren
 #### CHECK_BOX_LIST_DESELECT_ALL_ACTION_TOOLTIP=Deselects all Items in the List
-#? CHECK_BOX_LIST_DESELECT_ALL_ACTION_TOOLTIP=
+CHECK_BOX_LIST_DESELECT_ALL_ACTION_TOOLTIP=Deselecteer alle Items
 
 
 #Media Types
@@ -879,21 +879,21 @@ MEDIA_REWIND_BUTTON_TIP=Vorige
 # Key/value pairs for DownloaderDialog
 ################################################################################
 #### DOWNLOADER_DIALOG_DEFAULT_ACTION_SAVE_AS_LABEL=Always Save As...
-#? DOWNLOADER_DIALOG_DEFAULT_ACTION_SAVE_AS_LABEL=
+DOWNLOADER_DIALOG_DEFAULT_ACTION_SAVE_AS_LABEL=Altijd Opslaan Als...
 #### DOWNLOADER_DIALOG_DEFAULT_ACTION_APPEND_LABEL=Always Append (#)
-#? DOWNLOADER_DIALOG_DEFAULT_ACTION_APPEND_LABEL=
+DOWNLOADER_DIALOG_DEFAULT_ACTION_APPEND_LABEL=Voeg Altijd (#) toe
 #### DOWNLOADER_DIALOG_DEFAULT_ACTION_ASK_LABEL=Always Ask
-#? DOWNLOADER_DIALOG_DEFAULT_ACTION_ASK_LABEL=
+DOWNLOADER_DIALOG_DEFAULT_ACTION_ASK_LABEL=Altijd Vragen
 #### DOWNLOADER_DIALOG_DEFAULT_ACTION_LABEL=Choose a Default Action:
-#? DOWNLOADER_DIALOG_DEFAULT_ACTION_LABEL=
+DOWNLOADER_DIALOG_DEFAULT_ACTION_LABEL=Kies een standaard actie:
 #### DOWNLOADER_DIALOG_SAVE_AS_ACTION_NAME=Save As...
 DOWNLOADER_DIALOG_SAVE_AS_ACTION_NAME=Opslaan als...
 #### DOWNLOADER_DIALOG_SAVE_AS_ACTION_SHORT_DESCRIPTION=Choose a different location for the Download
 DOWNLOADER_DIALOG_SAVE_AS_ACTION_SHORT_DESCRIPTION=Kies een andere locatie voor deze download
 #### DOWNLOADER_DIALOG_APPEND_ACTION_NAME=Append (#)
-#? DOWNLOADER_DIALOG_APPEND_ACTION_NAME=
+DOWNLOADER_DIALOG_APPEND_ACTION_NAME=Voeg (#) toe
 #### DOWNLOADER_DIALOG_APPEND_ACTION_SHORT_DESCRIPTION=Appends (#) to filename
-#? DOWNLOADER_DIALOG_APPEND_ACTION_SHORT_DESCRIPTION=
+DOWNLOADER_DIALOG_APPEND_ACTION_SHORT_DESCRIPTION=Voegt (#) aan bestandsnaam
 #### DOWNLOADER_DIALOG_CANCEL_ACTION_SHORT_DESCRIPTION=Cancel the Download
 DOWNLOADER_DIALOG_CANCEL_ACTION_SHORT_DESCRIPTION=Afbreken download
 #### DOWNLOADER_DIALOG_OVERWRITE_ACTION_SHORT_NAME=Overwrite
@@ -1464,11 +1464,11 @@ PLAYLIST_FILE_PARSE_PROBLEM=. Het probleem kan niet verholpen worden.
 # if you don't have a limewire.props file
 ################################################################################
 #### SETUP_DIALOG_TITLE=Limewire Setup Dialog
-#? SETUP_DIALOG_TITLE=
+SETUP_DIALOG_TITLE=LimeWire Setup Venster
 #### SETUP_LANGUAGE_TITLE=Language Options
 SETUP_LANGUAGE_TITLE=Taalopties
 #### SETUP_CHOOSE_LANGUAGE_LABEL=Choose Language: 
-#? SETUP_CHOOSE_LANGUAGE_LABEL=
+SETUP_CHOOSE_LANGUAGE_LABEL=Kies uw Taal:
 #### SETUP_LANGUAGE_LABEL=Please choose the language you would like LimeWire to use.
 SETUP_LANGUAGE_LABEL=Gelieve een taalkeuze te maken voor LimeWire.
 #### SETUP_MORE_INFO=Learn more about this option...
@@ -1486,7 +1486,7 @@ SETUP_SAVE_LABEL=Kies de map waarin u uw bestanden wilt downloaden. Deze map zal
 #### SETUP_SPEED_TITLE=Connection Speed
 SETUP_SPEED_TITLE=Verbindingssnelheid
 #### SETUP_SPEED_TITLED_BORDER=Select Speed
-#? SETUP_SPEED_TITLED_BORDER=
+SETUP_SPEED_TITLED_BORDER=Selecteer uw Snelheid
 #### SETUP_SPEED_LABEL=Please choose the speed of your Internet connection. Setting this speed correctly is important for optimum network performance. If you are not sure what type of Internet connection you have, or if your connection type is not listed, simply select whichever one seems the most appropriate.
 SETUP_SPEED_LABEL=Selecteer de snelheid van uw internetverbinding. Dit is van belang voor de optimaal gebruik van het netwerk.
 #### SETUP_STARTUP_TITLE=System Startup
@@ -1508,19 +1508,19 @@ SETUP_SCAN_LABEL=Wilt u dat LimeWire nu snel uw harde schijf doorzoekt voor meer
 #### SETUP_WAIT_TITLE=Scanning Hard Drive
 SETUP_WAIT_TITLE=Bezig met zoeken...
 #### SETUP_WAIT_PROGRESS_STRING=Scanning Hard Drive...
-#? SETUP_WAIT_PROGRESS_STRING=
+SETUP_WAIT_PROGRESS_STRING=Harde schijf doorzoeken?
 #### SETUP_WAIT_LABEL=Please wait as LimeWire scans your hard drive...
 SETUP_WAIT_LABEL=Een moment alstublieft: LimeWire zoekt op de harde schijf...
 #### SETUP_WAIT_SCAN_CANCELLED_LABEL=Scan cancelled
-#? SETUP_WAIT_SCAN_CANCELLED_LABEL=
+SETUP_WAIT_SCAN_CANCELLED_LABEL=Scan afgebroken
 #### SETUP_WAIT_CANCEL_SCAN_ACTION_NAME=Cancel Scan
-#? SETUP_WAIT_CANCEL_SCAN_ACTION_NAME=
+SETUP_WAIT_CANCEL_SCAN_ACTION_NAME=Stop het zoeken
 #### SETUP_CONFIRM_TITLE=Confirm Scan
 SETUP_CONFIRM_TITLE=Bevestig zoektocht
 #### SETUP_CONFIRM_LABEL=We identified the folders below as ones that you might like to share. If you would like to share one of these folders, simply check its associated checkbox. Subfolders of shared folders will also be shared.
 SETUP_CONFIRM_LABEL=De onderstaande mappen komen in aanmerking om te worden gedeeld. Vink de vakjes aan welke u wilt delen. Onderliggende mappen worden dan automatisch ook gedeeld.
 #### SETUP_CONFIRM_FOLDERS_WILL_BE_SHARED=The selected folders below (and their subfolders) will be shared.
-#? SETUP_CONFIRM_FOLDERS_WILL_BE_SHARED=
+SETUP_CONFIRM_FOLDERS_WILL_BE_SHARED=De geselecteerde mappen (en submappen) zullen gedeeld worden.
 #### SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire was unable to locate any files that may be shared. To continue configuring LimeWire, click "Next".
 SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire kon de plaats niet bepalen van de bestanden om te kunnen worden gedeeld. Om door te gaan met configureren van LimeWire klik op "Verder".
 #### SETUP_FILTER_TITLE=Content Filtering
@@ -1598,7 +1598,7 @@ JAVA_UPGRADE_QUESTION=Wilt u een gratis update van Java?
 # Key/Value pairs for the change language window.
 ################################################################################
 #### LANGUAGE_LOADING=Loading Languages
-#? LANGUAGE_LOADING=
+LANGUAGE_LOADING=Talen Laden
 
 ###################################################################
 # Key/value pairs for XML
@@ -1736,9 +1736,9 @@ META_EDITOR_CANCEL_BUTTON_LABEL=Annuleren
 #### META_EDITOR_ADVANCED_BUTTON_LABEL=Advanced
 META_EDITOR_ADVANCED_BUTTON_LABEL=Geavanceerd
 #### META_EDITOR_RESET_LABEL=Reset
-#? META_EDITOR_RESET_LABEL=
+META_EDITOR_RESET_LABEL=Beginwaarden
 #### META_EDITOR_MULTIPLE_FILE_INFO_LABEL=Multiple File Information
-#? META_EDITOR_MULTIPLE_FILE_INFO_LABEL=
+META_EDITOR_MULTIPLE_FILE_INFO_LABEL=Informatie Meerdere Bestanden
 
 #### META_EDITOR_AUDIO_LABEL=Audio
 META_EDITOR_AUDIO_LABEL=Audio
@@ -2397,9 +2397,9 @@ LICENSE_UNKNOWN_INVALID=Dit bestand kan een licentie vereisen om te worden geope
 #### OPTIONS_SAVE_MAIN_TITLE=Saving
 OPTIONS_SAVE_MAIN_TITLE=Opslaan
 #### OPTIONS_SAVE_BASIC_MAIN_TITLE=Basic
-#? OPTIONS_SAVE_BASIC_MAIN_TITLE=
+OPTIONS_SAVE_BASIC_MAIN_TITLE=Simpel
 #### OPTIONS_SAVE_ADVANCED_MAIN_TITLE=Advanced
-#? OPTIONS_SAVE_ADVANCED_MAIN_TITLE=
+OPTIONS_SAVE_ADVANCED_MAIN_TITLE=Gevorderd
 #### OPTIONS_SHARED_MAIN_TITLE=Sharing
 OPTIONS_SHARED_MAIN_TITLE=Delen
 #### OPTIONS_SPEED_MAIN_TITLE=Speed
@@ -2872,15 +2872,15 @@ OPTIONS_POPUPS_DISPLAY_CHECK_BOX_LABEL=Keer terug naar de standaardwaarde
 # Key/value pairs for default action when trying to download existing file
 ################################################################################
 #### OPTIONS_DEFAULT_ACTION_FILE_EXISTS_TITLE=File Already Exists Behavior
-#? OPTIONS_DEFAULT_ACTION_FILE_EXISTS_TITLE=
+OPTIONS_DEFAULT_ACTION_FILE_EXISTS_TITLE=Bestandsnaam Bestaat Al
 #### OPTIONS_DEFAULT_ACTION_FILE_EXISTS_LABEL=You can choose the default action that LimeWire will perform when you try to download a file that already exists on disk.
-#? OPTIONS_DEFAULT_ACTION_FILE_EXISTS_LABEL=
+OPTIONS_DEFAULT_ACTION_FILE_EXISTS_LABEL=U kunt kiezen welke actie LimeWire standaard moet ondernemen als u een bestand probeert te downloaden dat al bestaat.
 #### OPTIONS_DEFAULT_ACTION_FILE_EXISTS_SAVE_AS_LABEL=Always Show the 'Save As' Dialog
-#? OPTIONS_DEFAULT_ACTION_FILE_EXISTS_SAVE_AS_LABEL=
+OPTIONS_DEFAULT_ACTION_FILE_EXISTS_SAVE_AS_LABEL=Toon altijd het 'Opslaan Als' Venster
 #### OPTIONS_DEFAULT_ACTION_FILE_EXISTS_APPEND_LABEL=Always Append (#) to the Filename
-#? OPTIONS_DEFAULT_ACTION_FILE_EXISTS_APPEND_LABEL=
+OPTIONS_DEFAULT_ACTION_FILE_EXISTS_APPEND_LABEL=Voeg altijd (#) toe aan de Bestandsnaam
 #### OPTIONS_DEFAULT_ACTION_FILE_EXISTS_ASK_LABEL=Always Ask What to do
-#? OPTIONS_DEFAULT_ACTION_FILE_EXISTS_ASK_LABEL=
+OPTIONS_DEFAULT_ACTION_FILE_EXISTS_ASK_LABEL=Vraag altijd, wat te doen 
 
 ################################################################################
 # Key/value pairs for the options pane used to enable and disable autocomplete
@@ -4456,3 +4456,4 @@ ALL_OOB_BYPASSED=Gemeden reacties
 STATS_OOB_THROUGHPUT_TITLE=Succesgehalte van OOB
 #### STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OOB Protocol
 STATS_OOB_THROUGHPUT_LABEL=Aantal verzochte en ontvangen reacties via OOB-protocol.
+
