Updated Dutch translation. Thanks again to Martijn, our dedicated Dutch translator!

--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.11.1
+# Messages Bundle for LimeWire 4.11.2
 # Specialization for: Dutch - Netherlands, Belgium
 # Thanks to: Willem Broekema, Edwin van Ouwerkerk Moria, Reinier Bergwerf, Jan Willem Lageman, Martijn Kortleve
 ################################################################################
@@ -1504,11 +1504,11 @@ SETUP_SCAN_TITLE=Bestanden zoeken
 #### SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which folders you would like to share when the scan is complete.
 SETUP_SCAN_LABEL=Wilt u dat LimeWire nu snel uw harde schijf doorzoekt voor meer bestanden om te delen (U kunt de gevonden mappen specificeren die u wilt delen.)
 #### SETUP_SCAN_TITLED_BORDER=Scan Hard Drive?
-#? SETUP_SCAN_TITLED_BORDER=
+SETUP_SCAN_TITLED_BORDER=Harde schijf doorzoeken?
 #### SETUP_WAIT_TITLE=Scanning Hard Drive
-SETUP_WAIT_TITLE=Bezig met zoeken...
+SETUP_WAIT_TITLE=Bezig met zoeken
 #### SETUP_WAIT_PROGRESS_STRING=Scanning Hard Drive...
-SETUP_WAIT_PROGRESS_STRING=Harde schijf doorzoeken?
+SETUP_WAIT_PROGRESS_STRING=Bezig met zoeken...
 #### SETUP_WAIT_LABEL=Please wait as LimeWire scans your hard drive...
 SETUP_WAIT_LABEL=Een moment alstublieft: LimeWire zoekt op de harde schijf...
 #### SETUP_WAIT_SCAN_CANCELLED_LABEL=Scan cancelled
@@ -1526,7 +1526,7 @@ SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire kon de plaats niet bepalen van de be
 #### SETUP_FILTER_TITLE=Content Filtering
 SETUP_FILTER_TITLE=Bestanden Filteren
 #### SETUP_FILTER_LABEL=LimeWire can filter files that copyright owners request not be shared.  By enabling filtering, you are telling LimeWire to confirm all files you download or share with a list of removed content.  You can change this at any time by choosing Filters -> Configure Content Filters from the main menu.
-SETUP_FILTER_LABEL=LimeWire kan bestanden filteren, waarvan eigenaren van het copyright verzocht hebben deze niet te delen.  Door het filteren aan te zetten, laat u LimeWire alle bestanden die u download of deelt met een lijst van verwijderde bestanden te bevestigen. U kan dit ten alle tijden nog veranderen door op Filters -> 'Configureer Bestand Filter' in het hoofdmenu te klikken.
+SETUP_FILTER_LABEL=LimeWire kan bestanden filteren, waarvan eigenaren van het copyright verzocht hebben deze niet te delen.  Door het filteren aan te zetten, laat u LimeWire alle bestanden die u download of deelt met een lijst van verwijderde bestanden controleren. U kan dit ten alle tijden nog veranderen door op Filters -> 'Configureer Bestand Filter' in het hoofdmenu te klikken.
 #### SETUP_FILTER_CHECKBOX=Enable Content Filtering
 SETUP_FILTER_CHECKBOX=Maak gebruik van Bestand Filter
 #### SETUP_FINISH_TITLE=Finish Setup
@@ -3085,7 +3085,7 @@ OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Wachtwoord:
 #### OPTIONS_CONTENT_FILTER_TITLE=Content Filters
 OPTIONS_CONTENT_FILTER_TITLE=Bestanden Filteren
 #### OPTIONS_CONTENT_FILTER_LABEL=You can tell LimeWire to filter files that copyright owners request not be shared.  By enabling filtering, you are instructing LimeWire to confirm all files you download or share with a list of removed content.
-OPTIONS_CONTENT_FILTER_LABEL=LimeWire kan bestanden filteren, waarvan eigenaren van het copyright verzocht hebben deze niet te delen.  Door het filteren aan te zetten, laat u LimeWire alle bestanden die u download of deelt met een lijst van verwijderde bestanden te bevestigen.
+OPTIONS_CONTENT_FILTER_LABEL=LimeWire kan bestanden filteren, waarvan eigenaren van het copyright verzocht hebben deze niet te delen.  Door het filteren aan te zetten, laat u LimeWire alle bestanden die u download of deelt met een lijst van verwijderde bestanden controleren.
 #### OPTIONS_CONTENT_FILTER_CHECKBOX_LABEL=Enable Content Filters
 OPTIONS_CONTENT_FILTER_CHECKBOX_LABEL=Maak gebruik van Bestand Filter
 
@@ -4456,3 +4456,4 @@ ALL_OOB_BYPASSED=Gemeden reacties
 STATS_OOB_THROUGHPUT_TITLE=Succesgehalte van OOB
 #### STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OOB Protocol
 STATS_OOB_THROUGHPUT_LABEL=Aantal verzochte en ontvangen reacties via OOB-protocol.
+
