--- a/lib/messagebundles/MessagesBundle_da.properties
+++ b/lib/messagebundles/MessagesBundle_da.properties
@@ -683,7 +683,7 @@ MAGNET_COPY_MAGNET_LINKS_WARNING=En eller flere af de dannede Magnet links er fo
 #### SEARCH_FOR_KEYWORDS_ACTION_NAME=Search for Keywords: {0}
 SEARCH_FOR_KEYWORDS_ACTION_NAME=Søgning efter nøgleord: {0}
 # {0} the title of the search
-# SEARCH_ACTION_NAME=Search for: {0}
+#### SEARCH_ACTION_NAME=Search for: {0}
 SEARCH_ACTION_NAME=Søgning efter: {0}
 # {0} the already translated mediatype
 #### SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
@@ -692,6 +692,19 @@ SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Søgning efter "Nye filer" for: {0}
 # {1} the keywords fo the search, e.g. name of the album
 #### SEARCH_XML_FIELD_ACTION_NAME=Search for {0}: {1}
 SEARCH_XML_FIELD_ACTION_NAME=Søgning efter {0}: {1}
+
+################################################################################
+# CheckBoxList actions
+################################################################################
+#### CHECK_BOX_LIST_SELECT_ALL_ACTION_NAME=Select All
+#? CHECK_BOX_LIST_SELECT_ALL_ACTION_NAME=
+#### CHECK_BOX_LIST_SELECT_ALL_ACTION_TOOLTIP=Marks all Items as Selected
+#? CHECK_BOX_LIST_SELECT_ALL_ACTION_TOOLTIP=
+#### CHECK_BOX_LIST_DESELECT_ALL_ACTION_NAME=Deselect All
+#? CHECK_BOX_LIST_DESELECT_ALL_ACTION_NAME=
+#### CHECK_BOX_LIST_DESELECT_ALL_ACTION_TOOLTIP=Deselects all Items in the List
+#? CHECK_BOX_LIST_DESELECT_ALL_ACTION_TOOLTIP=
+
 
 #Media Types
 #### MEDIA_ANY_TYPE=All Types
@@ -865,10 +878,22 @@ MEDIA_REWIND_BUTTON_TIP=Tilbage
 ################################################################################
 # Key/value pairs for DownloaderDialog
 ################################################################################
+#### DOWNLOADER_DIALOG_DEFAULT_ACTION_SAVE_AS_LABEL=Always Save As...
+#? DOWNLOADER_DIALOG_DEFAULT_ACTION_SAVE_AS_LABEL=
+#### DOWNLOADER_DIALOG_DEFAULT_ACTION_APPEND_LABEL=Always Append (#)
+#? DOWNLOADER_DIALOG_DEFAULT_ACTION_APPEND_LABEL=
+#### DOWNLOADER_DIALOG_DEFAULT_ACTION_ASK_LABEL=Always Ask
+#? DOWNLOADER_DIALOG_DEFAULT_ACTION_ASK_LABEL=
+#### DOWNLOADER_DIALOG_DEFAULT_ACTION_LABEL=Choose a Default Action:
+#? DOWNLOADER_DIALOG_DEFAULT_ACTION_LABEL=
 #### DOWNLOADER_DIALOG_SAVE_AS_ACTION_NAME=Save As...
 DOWNLOADER_DIALOG_SAVE_AS_ACTION_NAME=Gem som...
-#### DOWNLOADER_DIALOG_SAVE_AS_ACTION_SHORT_DESCRIPTION=Choose a Different Location for the Download
+#### DOWNLOADER_DIALOG_SAVE_AS_ACTION_SHORT_DESCRIPTION=Choose a different location for the Download
 DOWNLOADER_DIALOG_SAVE_AS_ACTION_SHORT_DESCRIPTION=Vælg anden destination for download
+#### DOWNLOADER_DIALOG_APPEND_ACTION_NAME=Append (#)
+#? DOWNLOADER_DIALOG_APPEND_ACTION_NAME=
+#### DOWNLOADER_DIALOG_APPEND_ACTION_SHORT_DESCRIPTION=Appends (#) to filename
+#? DOWNLOADER_DIALOG_APPEND_ACTION_SHORT_DESCRIPTION=
 #### DOWNLOADER_DIALOG_CANCEL_ACTION_SHORT_DESCRIPTION=Cancel the Download
 DOWNLOADER_DIALOG_CANCEL_ACTION_SHORT_DESCRIPTION=Stop igangværende download
 #### DOWNLOADER_DIALOG_OVERWRITE_ACTION_SHORT_NAME=Overwrite
@@ -1438,8 +1463,12 @@ PLAYLIST_FILE_PARSE_PROBLEM=. Filen kan ikke opdeles.
 # Key/value pairs for the LimeWire initialization wizard that is run
 # if you don't have a limewire.props file
 ################################################################################
+#### SETUP_DIALOG_TITLE=Limewire Setup Dialog
+#? SETUP_DIALOG_TITLE=
 #### SETUP_LANGUAGE_TITLE=Language Options
 SETUP_LANGUAGE_TITLE=Sprogvalg
+#### SETUP_CHOOSE_LANGUAGE_LABEL=Choose Language: 
+#? SETUP_CHOOSE_LANGUAGE_LABEL=
 #### SETUP_LANGUAGE_LABEL=Please choose the language you would like LimeWire to use.
 SETUP_LANGUAGE_LABEL=Vælg det sprog, som du ønsker, at LimeWire skal anvende.
 #### SETUP_MORE_INFO=Learn more about this option...
@@ -1456,6 +1485,8 @@ SETUP_SAVE_TITLE=Gem mappe
 SETUP_SAVE_LABEL=Vælg venligst en mappe hvor du ønsker dine filer downloadet til. Denne mappe vil som standard også blive delt med de øvrige gnutella brugere.
 #### SETUP_SPEED_TITLE=Connection Speed
 SETUP_SPEED_TITLE=Forbindelseshastighed
+#### SETUP_SPEED_TITLED_BORDER=Select Speed
+#? SETUP_SPEED_TITLED_BORDER=
 #### SETUP_SPEED_LABEL=Please choose the speed of your Internet connection. Setting this speed correctly is important for optimum network performance. If you are not sure what type of Internet connection you have, or if your connection type is not listed, simply select whichever one seems the most appropriate.
 SETUP_SPEED_LABEL=Vælg venligst hastigheden på din Internetforbindelse. Det er vigtigt for netværksydelsen, at sætte hastigheden korrekt. Hvis du ikke er sikker på hvilken type Internetforbindelse du har, eller hvis din forbindelsestype ikke er på listen, kan du vælge den der ligner mest hastighedsmæssigt.
 #### SETUP_STARTUP_TITLE=System Startup
@@ -1472,14 +1503,24 @@ SETUP_FIREWALL_LABEL=LimeWire virker bedst hvis der er fuld adgang til internett
 SETUP_SCAN_TITLE=Søg efter filer
 #### SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which folders you would like to share when the scan is complete.
 SETUP_SCAN_LABEL=Ønsker du at LimeWire hurtigt gennemsøger harddisken efter mediefiler? Du har muligheden for at angive, hvilke mapper du ønsker at dele, når gennemsøgningen er fuldført.
+#### SETUP_SCAN_TITLED_BORDER=Scan Hard Drive?
+#? SETUP_SCAN_TITLED_BORDER=
 #### SETUP_WAIT_TITLE=Scanning Hard Drive
 SETUP_WAIT_TITLE=Gennemsøger harddisk
+#### SETUP_WAIT_PROGRESS_STRING=Scanning Hard Drive...
+#? SETUP_WAIT_PROGRESS_STRING=
 #### SETUP_WAIT_LABEL=Please wait as LimeWire scans your hard drive...
 SETUP_WAIT_LABEL=Vent venligt mens LimeWire gennemsøger harddisken...
+#### SETUP_WAIT_SCAN_CANCELLED_LABEL=Scan cancelled
+#? SETUP_WAIT_SCAN_CANCELLED_LABEL=
+#### SETUP_WAIT_CANCEL_SCAN_ACTION_NAME=Cancel Scan
+#? SETUP_WAIT_CANCEL_SCAN_ACTION_NAME=
 #### SETUP_CONFIRM_TITLE=Confirm Scan
 SETUP_CONFIRM_TITLE=Bekræft gennemsøgning
 #### SETUP_CONFIRM_LABEL=We identified the folders below as ones that you might like to share. If you would like to share one of these folders, simply check its associated checkbox. Subfolders of shared folders will also be shared.
 SETUP_CONFIRM_LABEL=Vi identificerede nedenstående mapper, som mapper du måske måtte ønske at dele. Hvis du ønsker at dele en af disse mapper, skal du blot afkrydse boksen ud for den. Undermapper af delte mapper vil også blive delt.
+#### SETUP_CONFIRM_FOLDERS_WILL_BE_SHARED=The selected folders below (and their subfolders) will be shared.
+#? SETUP_CONFIRM_FOLDERS_WILL_BE_SHARED=
 #### SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire was unable to locate any files that may be shared. To continue configuring LimeWire, click "Next".
 SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire var ikke istand til at finde filer som kan deles. For at fortsætte konfigurering, klik "Næste".
 #### SETUP_FILTER_TITLE=Content Filtering
@@ -1512,7 +1553,7 @@ FILE_CHOOSER_DIRECTORY_TITLE=Vælg mappe
 # com.limegroup.gnutella.gui.init -- the wizard to setup the program when
 # limewire.props is not present or when the "INSTALLED" setting is false
 ################################################################################
-#### INIT_SAVE_DIRECTORY_FIELD_LABEL=Folder:
+#### INIT_SAVE_DIRECTORY_FIELD_LABEL=Save Folder:
 INIT_SAVE_DIRECTORY_FIELD_LABEL=Mappe:
 #### INIT_SAVE_BROWSE_BUTTON_LABEL=Browse...
 INIT_SAVE_BROWSE_BUTTON_LABEL=Gennemse...
@@ -1694,6 +1735,10 @@ META_EDITOR_OK_BUTTON_LABEL=OK
 META_EDITOR_CANCEL_BUTTON_LABEL=Annullér
 #### META_EDITOR_ADVANCED_BUTTON_LABEL=Advanced
 META_EDITOR_ADVANCED_BUTTON_LABEL=Advanced
+#### META_EDITOR_RESET_LABEL=Reset
+#? META_EDITOR_RESET_LABEL=
+#### META_EDITOR_MULTIPLE_FILE_INFO_LABEL=Multiple File Information
+#? META_EDITOR_MULTIPLE_FILE_INFO_LABEL=
 
 #### META_EDITOR_AUDIO_LABEL=Audio
 META_EDITOR_AUDIO_LABEL=Lyd
@@ -2351,6 +2396,10 @@ LICENSE_VERIFY=Bekræft
 ################################################################################
 #### OPTIONS_SAVE_MAIN_TITLE=Saving
 OPTIONS_SAVE_MAIN_TITLE=Gemmer
+#### OPTIONS_SAVE_BASIC_MAIN_TITLE=Basic
+#? OPTIONS_SAVE_BASIC_MAIN_TITLE=
+#### OPTIONS_SAVE_ADVANCED_MAIN_TITLE=Advanced
+#? OPTIONS_SAVE_ADVANCED_MAIN_TITLE=
 #### OPTIONS_SHARED_MAIN_TITLE=Sharing
 OPTIONS_SHARED_MAIN_TITLE=Deling
 #### OPTIONS_SPEED_MAIN_TITLE=Speed
@@ -2818,6 +2867,20 @@ OPTIONS_POPUPS_TITLE=Popups
 OPTIONS_POPUPS_LABEL=Vis de meddelelser igen, hvor du har valgt "Vis ikke denne meddelelse igen" eller "Anvend altid dette svar".
 #### OPTIONS_POPUPS_DISPLAY_CHECK_BOX_LABEL=Revert to Default:
 OPTIONS_POPUPS_DISPLAY_CHECK_BOX_LABEL=Brug standardvalg
+
+################################################################################
+# Key/value pairs for default action when trying to download existing file
+################################################################################
+#### OPTIONS_DEFAULT_ACTION_FILE_EXISTS_TITLE=File Already Exists Behavior
+#? OPTIONS_DEFAULT_ACTION_FILE_EXISTS_TITLE=
+#### OPTIONS_DEFAULT_ACTION_FILE_EXISTS_LABEL=You can choose the default action that LimeWire will perform when you try to download a file that already exists on disk.
+#? OPTIONS_DEFAULT_ACTION_FILE_EXISTS_LABEL=
+#### OPTIONS_DEFAULT_ACTION_FILE_EXISTS_SAVE_AS_LABEL=Always Show the 'Save As' Dialog
+#? OPTIONS_DEFAULT_ACTION_FILE_EXISTS_SAVE_AS_LABEL=
+#### OPTIONS_DEFAULT_ACTION_FILE_EXISTS_APPEND_LABEL=Always Append (#) to the Filename
+#? OPTIONS_DEFAULT_ACTION_FILE_EXISTS_APPEND_LABEL=
+#### OPTIONS_DEFAULT_ACTION_FILE_EXISTS_ASK_LABEL=Always Ask What to do
+#? OPTIONS_DEFAULT_ACTION_FILE_EXISTS_ASK_LABEL=
 
 ################################################################################
 # Key/value pairs for the options pane used to enable and disable autocomplete
@@ -4393,4 +4456,3 @@ ALL_OOB_BYPASSED=Respons der er forbigået
 STATS_OOB_THROUGHPUT_TITLE=OOB succes rate
 #### STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OOB Protocol
 STATS_OOB_THROUGHPUT_LABEL=Antal anmodede og modtagne respons via OOB protekollen
-
